# Kaleidoscope

./: CMakeLists.txt  README.md
.cache/clangd/index/: lexer.cpp.755A7ADD5B50469F.idx  main.cpp.6B9D41A5F8F5D0A9.idx  parse.cpp.13E654901D16BA04.idx
include/: AST.h  lexer.h  log.h  parser.h
src/: lexer.cpp  main.cpp
